# ForgeEngine

./: CMakeLists.txt  FORGE_BUILD_SPEC.txt  README.md  build.gradle
.github/workflows/: msbuild.yml
android/: EditorBridge.java  ForgeCommandStack.java  ForgeJMEApp.java  android_main.cpp
android/src/main/: AndroidManifest.xml  build.gradle  proguard-rules.pro
android/src/main/assets/icons/: README.txt
android/src/main/assets/icons/png/: README.txt
android/src/main/assets/icons/svg/: README.txt
android/src/main/java/com/forgeengine/: ForgeActivity.java
android/src/main/java/com/forgeengine/audio/: AudioManager.java
android/src/main/java/com/forgeengine/editor/: EditorBridgeFull.java  ForgeJMEAppFull.java
android/src/main/java/com/forgeengine/input/: ForgeInputManager.java
android/src/main/java/com/forgeengine/network/: NetworkManager.java
android/src/main/java/com/forgeengine/physics/: PhysicsManager.java
android/src/main/java/com/forgeengine/scripting/: ScriptingEngine.java
editor/: ForgeEditor.cpp  ForgeEditor.h  ForgeEditor_Main.cpp
editor/blueprint/: BlueprintEditor.cpp
editor/codeeditor/: CodeEditor.cpp
editor/gizmo/: TransformGizmo.cpp
editor/material/: MaterialEditor.cpp
editor/network/: NetworkPanel.cpp
editor/panels/: AllPanels.h  AnimatorPanel.h  ConsolePanel.h  EditorPanels.cpp  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  InspectorPanelFull.cpp  ProjectPanel.cpp  ProjectPanel.h  TopBar.cpp
editor/prefab/: PrefabSystem.cpp  PrefabSystem.h
editor/widgets/: IconSystem.cpp  IconSystem.h
editor/windows/: BuildWindow.h  GamePreviewWindow.h  SettingsWindow.h  ViewportWindow.h
jni/: JNIBridge.cpp  JNIBridge.h  JNIBridgeFull.cpp  JNIBridgeFull.h
